compiler/testData/diagnostics/tests/override/MissingDelegate.kt
class C : <!UNRESOLVED_REFERENCE, DELEGATION_NOT_TO_INTERFACE!>Base1<!> by <!UNRESOLVED_REFERENCE!>Base2<!>(1) {
  fun test() { }
}